# super-stt

./: Cargo.toml  README.md  codebook.toml  install.sh
.github/workflows/: ci.yml  release.yml  rust-clippy.yml
super-stt/: Cargo.toml  build.rs
super-stt-app/: Cargo.toml
super-stt-app/src/core/: app.rs
super-stt-app/src/daemon/: client.rs
super-stt-app/src/ui/: messages.rs
super-stt-app/src/ui/views/: settings.rs
super-stt-cosmic-applet/: Cargo.toml
super-stt-cosmic-applet/src/: lib.rs
super-stt-cosmic-applet/src/ui/sections/settings/: settings.rs
super-stt-shared/: Cargo.toml
super-stt-shared/src/: resource_management.rs
super-stt-shared/src/daemon/: client.rs
super-stt-shared/src/models/: mod.rs  protocol.rs  recording_stop_mode.rs  stt_model.rs
super-stt-shared/src/services/: notification.rs
super-stt-shared/src/utils/: audio.rs
super-stt/src/: cli.rs  config.rs  daemon_main.rs
super-stt/src/audio/: beeper.rs  device.rs  processing.rs  recorder.rs  state.rs
super-stt/src/daemon/: client_management.rs  core.rs  device_management.rs  handlers.rs  model_management.rs  recording.rs  types.rs
super-stt/src/output/: keyboard.rs
super-stt/src/stt_models/: download.rs
super-stt/src/stt_models/voxtral/: model.rs
super-stt/src/stt_models/whisper/: model.rs
