[workspace]
    resolver = "2"
    members = [
        "super-stt",
        "super-stt-app",
        "super-stt-cosmic-applet",
        "super-stt-shared",
    ]

    [workspace.package]
        version = "0.1.1"
        authors = ["Jorge Menjivar <jorge@menjivar.ai>"]
        edition = "2024"

    [workspace.dependencies]
        anyhow = "1.0.100"
        # Daemon specific
        byteorder = "1.5"
        # Shared dependencies with common versions
        # Candle ML framework (for daemon)
        candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main" }
        candle-flash-attn = { git = "https://github.com/huggingface/candle.git", branch = "main" }
        candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main" }
        candle-transformers = { git = "https://github.com/huggingface/candle.git", branch = "main" }
        chrono = { version = "0.4", features = ["serde"] }
        clap = { version = "4.5.54", features = ["cargo", "derive"] }
        clap_complete = "4.5.56"
        cpal = "0.16.0"
        dashmap = "6.1.0"
        dirs = "6.0.0"
        # Input simulation (for client)
        enigo = { version = "0.6.1", default-features = false, features = [
            "wayland",
        ] }
        env_logger = "0.11.8"
        futures-util = "0.3.31"
        # Audio processing
        hound = "3.5.1"
        i18n-embed = { version = "0.16.0", features = [
            "desktop-requester",
            "fluent-system",
        ] }
        i18n-embed-fl = "0.10.0"
        # System calls (for client singleton)
        libc = "0.2"
        # Cosmic specific
        libcosmic = { git = "https://github.com/pop-os/libcosmic.git", features = [
            "a11y",
            "applet",
            "dbus-config",
            "multi-window",
            "single-instance",
            "tokio",
            "wayland",
            "wgpu",
            "winit",
        ] }
        log = "0.4.29"
        open = "5.3.3"
        parking_lot = "0.12"
        reqwest = { version = "0.13.2", default-features = false, features = [
            "json",
            "multipart",
            "stream",
        ] }
        rubato = "0.16"
        rust-embed = "8.11.0"
        rustfft = "6.4.1"
        serde = { version = "1.0.219", features = ["derive"] }
        serde_json = "1.0.149"
        spectrum-analyzer = "1.7.0"
        strum = { version = "0.27.2", features = ["derive"] }
        strum_macros = "0.27"
        symphonia = { version = "0.5", features = ["all"] }
        sysinfo = "0.37.0"
        tekken-rs = "0.1.1"
        thiserror = "2.0"
        # Tokenizers (for daemon)
        tokenizers = "0.22.2"
        tokio = { version = "1.49.0", features = [
            "full",
            "macros",
            "net",
            "rt-multi-thread",
            "time",
        ] }
        tokio-util = "0.7"
        # Filesystem utilities
        toml = "1.0.3"
        uuid = { version = "1.18.0", features = ["v4"] }
        # Build dependencies
        vergen = { version = "8.3.1", features = ["git", "gitcl"] }
        # D-Bus integration
        zbus = "5.13.2"

    [workspace.metadata.cross.build]
        pre-build = [
            "dpkg --add-architecture $CROSS_DEB_ARCH",
            "apt-get update && apt-get --assume-yes install git libxkbcommon-dev:$CROSS_DEB_ARCH libwayland-dev:$CROSS_DEB_ARCH libxkbcommon-x11-dev:$CROSS_DEB_ARCH libegl1-mesa-dev:$CROSS_DEB_ARCH libfontconfig1-dev:$CROSS_DEB_ARCH libfreetype6-dev:$CROSS_DEB_ARCH libglib2.0-dev:$CROSS_DEB_ARCH libspeechd-dev:$CROSS_DEB_ARCH libxrandr-dev:$CROSS_DEB_ARCH libxinerama-dev:$CROSS_DEB_ARCH libxcursor-dev:$CROSS_DEB_ARCH libxi-dev:$CROSS_DEB_ARCH libxss-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH pkg-config libssl-dev:$CROSS_DEB_ARCH",
        ]

        [workspace.metadata.cross.build.env]
            passthrough = ["BUILD_VARIANT", "CUDA_COMPUTE_CAP", "DOCKER_OPTS"]

[profile.release]
    lto = true
    panic = "abort"
    codegen-units = 1
