[package]
    name = "super-stt-app"
    version.workspace = true
    authors.workspace = true
    edition.workspace = true
    description = "Super STT client application"
    repository = "https://github.com/jorge-menjivar/super-stt"
    license = "GPL-3.0-only"

[dependencies]
    anyhow.workspace = true
    dirs.workspace = true
    env_logger.workspace = true
    futures-util.workspace = true
    i18n-embed.workspace = true
    i18n-embed-fl.workspace = true
    libc.workspace = true
    # COSMIC dependencies
    libcosmic.workspace = true
    log.workspace = true
    open.workspace = true
    rust-embed.workspace = true
    serde.workspace = true
    serde_json.workspace = true
    # Cosmic settings dependencies
    slab = "0.4"
    slotmap = "1.1"
    strum.workspace = true
    strum_macros.workspace = true
    # Workspace dependencies
    super-stt-shared = { path = "../super-stt-shared", features = ["analysis"] }
    tokio.workspace = true
    # Configuration
    toml.workspace = true
    uuid.workspace = true

[build-dependencies]
    vergen.workspace = true

[features]
    default = []
